
noinst_LTLIBRARIES = libswsse2.la

libswsse2_la_SOURCES = fastalib.h  fastalib.c \
					   matrix.h    matrix.c \
					   swscalar.h  swscalar.c \
					   swsse2.h    swsse2.c \
					   swstriped.h swstriped.c \
					   swwozniak.h swwozniak.c \
					   blosum62.h  blosum62.c


libswsse2_la_CFLAGS = -msse2

EXTRADIST = README COPYRIGHT

